--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@cypress/vue": "^3.0.5",
+    "@cypress/webpack-dev-server": "^1.7.0",
     "@popperjs/core": "^2.10.2",
     "core-js": "^3.6.5",
+    "html-webpack-plugin": "^4.5.2",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@cypress/webpack-preprocessor": "^5.10.0",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
@@ -34,20 +39,27 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^2.0.0-0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
+    "cypress": "^9.0.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
     "prettier": "^1.19.1",
+    "start-server-and-test": "^1.14.0",
     "typescript": "~3.9.3",
     "vue-jest": "^5.0.0-0",
     "vue-loader": "^16.8.1",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
     "env": {
       "node": true
+    },
+    "globals": {
+      "cy": true
     },
     "extends": [
       "plugin:vue/vue3-essential",
